--- a/index.html
+++ b/index.html
@@ -22,16 +22,14 @@
       <div class="calendarCard">
         <div class="card-body">
           <h5 class="card-title">Calendar</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
+          <p class="card-text">Access your daily go-to planner to save dates!</p>
           <a href="calendar.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go to Calendar</a>
         </div>
       </div>
       <div class="toDoListCard">
         <div class="card-body">
           <h5 class="card-title">To Do List</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
+          <p class="card-text">Access your handy to-do list to complete your homework!</p>
           <a href="toDoList.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go to To-Do List</a>
         </div>
       </div>
@@ -40,8 +38,7 @@
       <div class="progressTrackerCard">
         <div class="card-body">
           <h5 class="card-title">Progress Tracker</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content.</p>
+          <p class="card-text">See how much you have finished so far in particular tasks!</p>
 
           <a href="progressTracker.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go to Progress Tracker</a>
         </div>
@@ -50,8 +47,7 @@
         <a href="timer.html"></a>
         <div class="card-body">
           <h5 class="card-title">Timer</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
+          <p class="card-text">The perfect study timer to make sure you keep up with the clock!</p>
           <a href="timer.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go to Timer</a>
         </div>
       </div>
