--- a/calendar.html
+++ b/calendar.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <p align="center"><iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FChicago&bgcolor=%23ffffff&showTitle=0&showPrint=0&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%230B8043" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
+    <p>  </p><p>  </p><p></p>
     <p align="center"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Add Task
     </button></p>
@@ -16,7 +16,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h1 class="modal-title fs-5" id="exampleModalLabel">Add Task</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close""></button>
           </div>
           <div class="modal-body">
             <label for="tasktitle" class="col-form-label">Task Title:</label>
@@ -29,11 +29,40 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Save changes</button>
+            <button onclick="myFunction()" type="submit" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
           </div>
         </div>
       </div>
     </div>
+    <script>
+      function removeCard(){
+        const element = document.getElementById("TaskCard");
+        element.remove(); 
+      }
+      function myFunction(){
+        let title = document.getElementById("Tasktitle").value;
+        let description = document.getElementById("Taskdescription").value;
+        let time = document.getElementById("tasktime").value;
+        const para = document.createElement("p");
+        const para2 = document.createElement("p");
+        console.log(title.length == 0 || time.length == 0);
+        if (title.length == 0 || time.length == 0){
+          para2.innerHTML += '<div class="alert alert-danger alert-dismissible fade show" role="alert">Please fill in the Task Title and Time.<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
+          document.getElementById("liveToast").appendChild(para2);
+        }
+        else{
+          if (description.length == 0){
+            let description = '---';
+          }
+          para.innerHTML += '<div class="col" id = "TaskCard"><div class="card text-center" style="width: 18rem;"><h5 class="card-title">'+title+'</h5><h6 class="card-subtitle mb-2 text-muted">'+time+'</h6><p class="card-text">'+description+'</p><a onclick="removeCard()" class="btn btn-primary">Remove Task</a></div></div>';
+          document.getElementById("Tasks").appendChild(para);
+        }
+      }
+    </script>
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11" id="liveToast">
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4" id = "Tasks">
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
