Added New Files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="indexStyle.css" />
   <link href='https://fonts.googleapis.com/css?family=Alumni Sans' rel='stylesheet'>
   <title>TIMELY</title>
 </head>
@@ -17,41 +17,38 @@
     <h2 class="subTitle">Time Management App</h2>
   </div>
 
-  <div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="row row-cols-1 row-cols-md-2 g-3">
     <div class="col">
       <div class="calendarCard">
         <div class="card-body">
           <h5 class="card-title">Calendar</h5>
           <p class="card-text">Access your daily go-to planner to save dates!</p>
-          <a href="calendar.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go to Calendar</a>
-        </div>
-      </div>
-      <div class="toDoListCard">
-        <div class="card-body">
-          <h5 class="card-title">To Do List</h5>
-          <p class="card-text">Access your handy to-do list to complete your homework!</p>
-          <a href="toDoList.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go to To-Do List</a>
+          <a href="calendar.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go
+            to Calendar</a>
         </div>
       </div>
     </div>
     <div class="col">
-      <div class="progressTrackerCard">
-        <div class="card-body">
-          <h5 class="card-title">Progress Tracker</h5>
-          <p class="card-text">See how much you have finished so far in particular tasks!</p>
-
-          <a href="progressTracker.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go to Progress Tracker</a>
-        </div>
-      </div>
       <div class="timerCard">
-        <a href="timer.html"></a>
         <div class="card-body">
           <h5 class="card-title">Timer</h5>
           <p class="card-text">The perfect study timer to make sure you keep up with the clock!</p>
-          <a href="timer.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go to Timer</a>
+          <a href="timer.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go to
+            Timer</a>
         </div>
       </div>
     </div>
+    <div class="toDoListCard" style="margin-inline: auto; align-content: center;">
+      <div class="card-body">
+        <h5 class="card-title">To-Do List</h5>
+        <p class="card-text">Access your handy to-do list to complete your homework!</p>
+        <a href="toDoList.html" class="btn btn-primary" style="background-color: rgb(50, 50, 120); border: none;">Go
+          to To-Do List</a>
+      </div>
+    </div>
+    <!-- <div class="buttonContainer">
+      <button><a href="login.html">Login in</a></button>
+    </div> -->
   </div>
 </body>
 
