--- a/calendar.html
+++ b/calendar.html
@@ -1,41 +1,87 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TIMELY</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <p align="center"><iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FChicago&bgcolor=%23ffffff&showTitle=0&showPrint=0&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%230B8043" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
-    <p align="center"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>TIMELY</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Alumni Sans' rel='stylesheet'>
+</head>
+
+<body>
+  <h1 style="text-align: center;">Calendar</h1>
+  <p align="center"><iframe
+      src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FChicago&bgcolor=%23ffffff&showTitle=0&showPrint=0&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%230B8043"
+      style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
+  <p align="center"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Add Task
     </button></p>
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Add Task</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <label for="tasktitle" class="col-form-label">Task Title:</label>
-            <input class="form-control" type="text" placeholder="Enter Task Title Here" id="Tasktitle" aria-label="default input example">
-            <label for="taskdescription" class="col-form-label">Task Description:</label>
-            <textarea class="form-control" id="Taskdescription" rows="3" placeholder="Enter Task Description Here"></textarea>
-            <p></p>
-            <label for="tasktime">Task Time (Date and Time):</label>
-            <input type="datetime-local" id="tasktime" name="tasktime">
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Save changes</button>
-          </div>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Add Task</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <label for="tasktitle" class="col-form-label">Task Title:</label>
+          <input class="form-control" type="text" placeholder="Enter Task Title Here" id="Tasktitle"
+            aria-label="default input example">
+          <label for="taskdescription" class="col-form-label">Task Description:</label>
+          <textarea class="form-control" id="Taskdescription" rows="3"
+            placeholder="Enter Task Description Here"></textarea>
+          <p></p>
+          <label for="tasktime">Task Time (Date and Time):</label>
+          <input type="datetime-local" id="tasktime" name="tasktime">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" id="submitTasks" onclick="eventAdder()" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+  </div>
+  <script>
+    function eventAdder() {
+      let eventTitle = document.getElementById("Tasktitle").value;
+      let eventDescription = document.getElementById("Taskdescription").value;
+      let eventTime = document.getElementById("tasktime").value;
+      const event = {
+        'summary': eventTitle,
+        'description': eventDescription,
+        'start': {
+          'dateTime': eventTime,
+          'timeZone': 'America/Chicago'
+        },
+        'end': {
+          'dateTime': eventTime,
+          'timeZone': 'America/Chicago'
+        },
+        'reminders': {
+          'useDefault': true
+        }
+      };
+
+      const request = gapi.client.calendar.events.insert({
+        'calendarId': 'Holidays',
+        'resource': event
+      });
+      
+      window.alert('shut up');
+      request.execute(function (event) {
+        appendPre('Event created: ' + event.htmlLink);
+      });
+      winoow.alert("You suck");
+    }
+
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
 
 <div class="calendarTitle">
