--- a/toDoList.html
+++ b/toDoList.html
@@ -1,51 +1,203 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TIMELY</title>
+    <link rel="stylesheet" href="todoStyle.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Alumni Sans' rel='stylesheet'>
+    <style>
+        p {
+            font-size: 20px;
+        }
+
+        .container {
+            background-color: rgb(179, 151, 253);
+            width: 80%;
+            padding: 0px;
+            border-radius: 15px;
+        }
+
+        .skill {
+            background-color: rgb(50, 50, 120);
+            padding: 1%;
+            color: white;
+            text-align: right;
+            font-size: 20px;
+            border-radius: 15px;
+            width: 0%;
+        }
+    </style>
 </head>
 
 <body>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-    }
+    <header>To-Do List</header>
+    <div id="TaskBar">
+        <div id="TasksDone">
 
-    #todoCardBody {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-    .task{
-      display: flex;
-    }
-
-  </style>
-  <div>
-    <h5 class="card-title">Todo list</h5>
-    <div class="card-body" id="todoCardBody">
-      <div class="task">
-        <h1>Task #1</h1>
-        <button>Remove</button>
-      </div>
-      <div class="task">
-        <h1>Task #2</h1>
-        <button>Remove</button>
-      </div>
-      <div class="task">
-        <h1>Task #3</h1>
-        <button>Remove</button>
-      </div>
+        </div>
     </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    <div id="taskContainer">
+        <div id="inputArea">
+            <div id="inputs">
+                <input placeholder="New Task" id="newTask">
+                <input placeholder="Time" type="time" id="newTime">
+            </div>
+            <button id="addTask" onclick="taskAdder()"><b>Add</b></button>
+        </div>
+        <div id="taskHolder">
+        </div>
+    </div>
+    <header>Progress Bar</header>
+    <div class="container">
+        <div class="skill">
+            <span id="percent">0%</span>
+            <span style="display: none;" id="totalTasks">0</span>
+            <span style="display: none;" id="completedTasks">0</span>
+        </div>
+    </div>
 </body>
 
-</html>
+<script>
+    let keys = Object.keys(localStorage);
+    let totalTasks = parseInt(document.getElementById("totalTasks").textContent);
+    let completedTasks = parseInt(document.getElementById("completedTasks").textContent);
+    for (let i = 1; i <= keys.length; i++) {
+        let task = localStorage.getItem(`${i}`);
+        task = JSON.parse(task);
+        let taskArea = document.getElementById("taskHolder");
+        let taskText = task['task'];
+        let taskTime = task['time'];
+        let completed = task['complete'];
+        let check = ''
+        if (completed == true); {
+            check = '☑';
+            completedTasks += 1;
+        }
+        if (completed == false) {
+            check = '☐';
+        }
+        let taskUI = document.createElement('div');
+        taskUI.className = 'tasks';
+        taskUI.id = `tasks${i}`
+        taskUI.innerHTML = `<div id="Task${i}" class="task"><div id="textArea">
+    <h1 id="${i}">${taskText}</h1><h6>${taskTime}</h6></div>
+    <button id="${i}" class="CheckButton"onclick="Finish()"><span id="Check${i}">${check}</span></button>
+    <button class="DeleteButton" id="${i}" onclick="taskRemover()">❌</button>
+</div>`
+        taskArea.appendChild(taskUI);
+        totalTasks += 1;
+    }
+
+    document.getElementById("totalTasks").textContent = totalTasks;
+    document.getElementById("completedTasks").textContent = completedTasks;
+</script>
+
+<script>
+    let id = 1;
+    let allTasks = {};
+    function taskAdder() {
+        let taskArea = document.getElementById("taskHolder");
+        let task = document.getElementById("newTask").value;
+        if (task != "") {
+            let time = document.getElementById("newTime").value;
+            if (time != "") {
+                time = tConvert(time);
+            } else {
+                time = "No Time";
+            }
+            let taskUI = document.createElement("div");
+            taskUI.className = "tasks";
+            taskUI.id = `tasks${id}`;
+            taskUI.innerHTML = `<div id="Task${id}" class="task"><div id="textArea">
+            <h1 id="${id}">${task}</h1><h6>${time}</h6></div>
+            <button id="${id}" class="CheckButton"onclick="Finish()"><span id="Check${id}">☐</span></button>
+            <button class="DeleteButton" id="${id}" onclick="taskRemover()">❌</button>
+            </div>`
+            taskArea.appendChild(taskUI);
+            document.getElementById("newTask").value = "";
+            let taskData = {
+                'task': task,
+                'time': time,
+                'complete': false
+            }
+            let theTask = JSON.stringify(taskData);
+            localStorage.setItem(`${id}`, theTask)
+            allTasks[`${id}`] = taskData
+            id = id + 1;
+            totalTasks += 1;
+            editInfo();
+        } else {
+            window.alert("Taskfield is empty");
+        }
+
+    }
+
+    function taskRemover() {
+        let taskNumber = event.srcElement.id
+        let task = document.getElementById(`tasks${taskNumber}`)
+        if (allTasks[`${taskNumber}`]['complete'] == true) {
+            completedTasks -= 1;
+        }
+        delete allTasks[`${taskNumber}`];
+        localStorage.removeItem(`${taskNumber}`)
+        --id;
+        task.remove();
+        totalTasks -= 1;
+        editInfo();
+    }
+    function Finish() {
+        let id = event.srcElement.id;
+        document.getElementById(`Check${id}`).textContent = "☑";
+        if (allTasks[`${id}`]['complete'] != true) {
+
+        }
+        allTasks[`${id}`]['complete'] = true;
+        let theTask = JSON.stringify(allTasks[`${id}`]);
+        localStorage.setItem(`${id}`, theTask)
+        completedTasks += 1
+        editInfo();
+    }
+
+    function tConvert(time) {
+        let splitTime = time.split(':');
+        let hours = parseInt(splitTime[0]);
+        let minutes = splitTime[1];
+        let meridian = "";
+
+        if (hours >= 12) {
+            meridian = "PM";
+            hours -= 12;
+        } else {
+            meridian = "AM";
+        }
+
+        let newTime = hours.toString() + ':' + minutes + ' ' + meridian;
+
+        return newTime;
+    }
+
+    function taskBar(tasksDone, totalTasks) {
+        let percent = tasksDone / totalTasks;
+        document.getElementsByClassName("skill").style.width = percent.toString() + "%";
+    }
+
+    function setTaskBar() {
+        let totalTasks = parseInt(document.getElementById("totalTasks").textContent);
+        let completedTasks = parseInt(document.getElementById("completedTasks").textContent);
+        let percent = Math.round((completedTasks / totalTasks) * 100);
+        document.getElementById("percent").textContent = percent.toString() + "%";
+        document.getElementById("percent").style.width = percent.toString() + "%";
+    }
+
+    function editInfo() {
+        document.getElementById("totalTasks").textContent = totalTasks;
+        document.getElementById("completedTasks").textContent = completedTasks;
+    }
+</script>
+
+</html
